[metadata]
name = proxmark3py
version = 0.0.4
author = Chunmin Tai
author_email = taichunmin@gmail.com
description = A proxmark3 library base on pyserial
keywords = proxmark3, serial, mifare, nfc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taichunmin/proxmark3py
project_urls =
    Bug Tracker = https://github.com/taichunmin/proxmark3py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyserial

[options.packages.find]
where = src
